Oh no, it's really shit